k8s-in-action/c3/services/nodePort-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: kubia-rc
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
