k8s-in-action/c3/services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-rc
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia-rc
