k8s-in-action/c3/services/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-ingress
  labels:
    name: kubia-ingress
spec:
  tls:
  - hosts:
    - kubia.example.com
    secretName: tls-secret
  rules:
  - host: kubia.example.com # this ingress maps this domain name to your service
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodeport-service # all requests will be sent to port 80 of the kubia-nodeport service
            port: 
              number: 80
